--- a/proj2_client/AndroidManifest.xml
+++ b/proj2_client/AndroidManifest.xml
@@ -2,13 +2,14 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="lpoo.proj2"
     android:versionCode="1"
-    android:versionName="1.0" >
+    android:versionName="1.0" android:installLocation="auto">
 
     <uses-sdk
         android:minSdkVersion="14"
         android:targetSdkVersion="21" />
 
 	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.READ_PHONE_STATE"/>
+	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.CHANGE_WIFI_STATE"/>
 	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.INTERNET"/>
 	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.ACCESS_NETWORK_STATE"/>
 	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.ACCESS_WIFI_STATE"/>
