--- a/proj2_client/AndroidManifest.xml
+++ b/proj2_client/AndroidManifest.xml
@@ -1,20 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="lpoo.proj2"
+    android:installLocation="auto"
     android:versionCode="1"
-    android:versionName="1.0" android:installLocation="auto">
+    android:versionName="1.0" >
 
     <uses-sdk
         android:minSdkVersion="14"
-        android:targetSdkVersion="21" />
+        android:targetSdkVersion="22" />
 
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.READ_PHONE_STATE"/>
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.CHANGE_WIFI_STATE"/>
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.INTERNET"/>
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.ACCESS_NETWORK_STATE"/>
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.ACCESS_WIFI_STATE"/>
-	<android:uses-permission android:maxSdkVersion="21" android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"/>
-	
+    <android:uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        android:maxSdkVersion="21" />
+    <android:uses-permission
+        android:name="android.permission.CHANGE_WIFI_STATE"
+        android:maxSdkVersion="21" />
+    <android:uses-permission
+        android:name="android.permission.INTERNET"
+        android:maxSdkVersion="21" />
+    <android:uses-permission
+        android:name="android.permission.ACCESS_NETWORK_STATE"
+        android:maxSdkVersion="21" />
+    <android:uses-permission
+        android:name="android.permission.ACCESS_WIFI_STATE"
+        android:maxSdkVersion="21" />
+    <android:uses-permission
+        android:name="android.permission.CHANGE_WIFI_MULTICAST_STATE"
+        android:maxSdkVersion="21" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -25,6 +38,7 @@
             android:label="@string/title_activity_main" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -36,4 +50,5 @@
             </intent-filter>
         </activity>
     </application>
+
 </manifest>
